--- a/dashboard.html
+++ b/dashboard.html
@@ -205,8 +205,10 @@
                                         beginAtZero: true,  // Start the scale at zero
                                         stepSize: 1,  // Define the step size based on your data or preferences
                                         maxTicksLimit: 5,  // Limit the number of tick labels to avoid clutter
-                                        color: '#666'  // Color for the tick labels, choose one that suits your design
-                                    }
+                                        color: '#666',  // Color for the tick labels, choose one that suits your design
+                                        font: { size: 14 }
+                                    },
+                                    pointLabels: { font: { size: 16 } }
                                 }
                             },
                             elements: {
@@ -263,8 +265,10 @@
                                         beginAtZero: true,  // Start the scale at zero
                                         stepSize: 1,  // Define the step size based on your data or preferences
                                         maxTicksLimit: 5,  // Limit the number of tick labels to avoid clutter
-                                        color: '#666'  // Color for the tick labels, choose one that suits your design
-                                    }
+                                        color: '#666',  // Color for the tick labels, choose one that suits your design
+                                        font: { size: 14 }
+                                    },
+                                    pointLabels: { font: { size: 16 } }
                                 }
                             },
                             elements: {
