--- a/dashboard.html
+++ b/dashboard.html
@@ -205,10 +205,8 @@
                                         beginAtZero: true,  // Start the scale at zero
                                         stepSize: 1,  // Define the step size based on your data or preferences
                                         maxTicksLimit: 5,  // Limit the number of tick labels to avoid clutter
-                                        color: '#666',  // Color for the tick labels, choose one that suits your design
-                                        font: { size: 14 }
-                                    },
-                                    pointLabels: { font: { size: 16 } }
+                                        color: '#666'  // Color for the tick labels, choose one that suits your design
+                                    }
                                 }
                             },
                             elements: {
@@ -265,10 +263,8 @@
                                         beginAtZero: true,  // Start the scale at zero
                                         stepSize: 1,  // Define the step size based on your data or preferences
                                         maxTicksLimit: 5,  // Limit the number of tick labels to avoid clutter
-                                        color: '#666',  // Color for the tick labels, choose one that suits your design
-                                        font: { size: 14 }
-                                    },
-                                    pointLabels: { font: { size: 16 } }
+                                        color: '#666'  // Color for the tick labels, choose one that suits your design
+                                    }
                                 }
                             },
                             elements: {
