--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-family: 'Inter', sans-serif;
         }
         .hero-bg {
-            background-image: url('https://taleindex.me/assets/homeslide.jpg');
+            background-image: url('https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80');
             background-size: cover;
             background-position: center;
         }
