--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-family: 'Inter', sans-serif;
         }
         .hero-bg {
-            background-image: url('https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80');
+            background-image: url('assets/homeslide.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -60,7 +60,7 @@
             <div class="container mx-auto px-6 text-center">
                 <div class="bg-black bg-opacity-50 p-8 rounded-lg inline-block">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the power of storytelling</h1>
-                    <p class="text-xl mb-8">atk2: with AI and NeuroScience Driven Insights</p>
+                    <p class="text-xl mb-8">with AI and NeuroScience Driven Insights</p>
                     <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Get Started</a>
                 </div>
             </div>
