--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             background-image: url('assets/homeslide.jpg');
             background-size: cover;
             background-position: center;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .features-bg {
             background-image: url('https://images.unsplash.com/photo-1516414447565-b14be0adf13e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80');
